--- a/xss/production/android/Gallery/AndroidManifest.xml
+++ b/xss/production/android/Gallery/AndroidManifest.xml
@@ -9,7 +9,8 @@
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4"/>
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:name=".ActGallery"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+				  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
