--- a/xss/production/android/jBox2d_2/AndroidManifest.xml
+++ b/xss/production/android/jBox2d_2/AndroidManifest.xml
@@ -9,7 +9,9 @@
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="7"/>
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         <activity android:name=".ActjBox2d_2"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+					android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+								  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
